# lliurex-onedrive-plasmoid

./: CMakeLists.txt
applets/: CMakeLists.txt
applets/lliurexonedrive/: CMakeLists.txt
applets/lliurexonedrive/knotifications5/: llxonedrive.notifyrc
applets/lliurexonedrive/knotifications6/: llxonedrive.notifyrc
applets/lliurexonedrive/package/: metadata.desktop  metadata.json
applets/lliurexonedrive/package/contents/ui/: LatestFiles.qml  ListDelegateFileItem.qml  ListDelegateItem.qml  ListDelegateSpaceItem.qml  ListDelegateUploadedFileItem.qml  SpaceInfo.qml  SpacesView.qml  UploadedFiles.qml  main.qml
applets/lliurexonedrive/plugin/: LliurexOneDriveWidget.cpp  LliurexOneDriveWidget.h  LliurexOneDriveWidgetFileItem.cpp  LliurexOneDriveWidgetFileItem.h  LliurexOneDriveWidgetFilesModel.cpp  LliurexOneDriveWidgetFilesModel.h  LliurexOneDriveWidgetItem.cpp  LliurexOneDriveWidgetItem.h  LliurexOneDriveWidgetModel.cpp  LliurexOneDriveWidgetModel.h  LliurexOneDriveWidgetSpaceItem.cpp  LliurexOneDriveWidgetSpaceItem.h  LliurexOneDriveWidgetSpacesModel.cpp  LliurexOneDriveWidgetSpacesModel.h  LliurexOneDriveWidgetUtils.cpp  LliurexOneDriveWidgetUtils.h  plugin.cpp  plugin.h  qmldir
debian/: changelog  control  dirs  plasma-widget-lliurex-onedrive.install  plasma-widget-lliurex-onedrive.postinst  plasma-widget-lliurex-onedrive.postrm  plasma-widget-lliurex.onedrive.prerm  rules
debian/.debhelper/plasma-widget-lliurex-onedrive/: dbgsym-build-ids
debian/.debhelper/plasma-widget-lliurex-onedrive/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/plasma-widget-lliurex-onedrive/dbgsym-root/usr/share/doc/: plasma-widget-lliurex-onedrive-dbgsym
po/: plasma_applet_org.kde.plasma.lliurexonedrive.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.lliurexonedrive.po
po/ca@valencia/: plasma_applet_org.kde.plasma.lliurexonedrive.po
po/en_GB/: plasma_applet_org.kde.plasma.lliurexonedrive.po
po/es/: plasma_applet_org.kde.plasma.lliurexonedrive.po
